--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -49,7 +49,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLLGeral.cs" />
     <Compile Include="ClienteBLL.cs" />
+    <Compile Include="ContratoBLL.cs" />
+    <Compile Include="FuncionarioBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
