--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\SGT-VS2019\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\SGT-VS2019\packages\System.Diagnostics.DiagnosticSource.6.0.0\lib\net461\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -73,6 +74,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClienteDAL.cs" />
+    <Compile Include="ContratoDAL.cs" />
+    <Compile Include="FuncionarioDAL.cs" />
     <Compile Include="GeralDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
