--- a/SGT-VS2019/App.config
+++ b/SGT-VS2019/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<appSettings>
+		<add key="server" value="paulotur.mysql.uhserver.com" />
+		<add key="database" value="paulotur" />
+		<add key="uid" value="paulotursp" />
+		<add key="password" value="{*ojXwjmCCui7" />
+	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
