Adicionado Inicio dos Relatórios

--- a/SGT-VS2019/App.config
+++ b/SGT-VS2019/App.config
@@ -1,10 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<appSettings>
-		<add key="server" value="paulotur.mysql.uhserver.com" />
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="SGT_VS2019.Properties.Settings.pauloturConnectionString"
+   connectionString="User Id=root;Host=localhost;Database=paulotur;Persist Security Info=True"
+   providerName="Devart.Data.MySql" />
+ </connectionStrings>
+ <appSettings>
+		<!--<add key="server" value="paulotur.mysql.uhserver.com" />
 		<add key="database" value="paulotur" />
 		<add key="uid" value="paulotursp" />
-		<add key="password" value="{*ojXwjmCCui7" />
+		<add key="password" value="{*ojXwjmCCui7" />-->
+		<add key="server" value="localhost" />
+		<add key="database" value="paulotur" />
+		<add key="uid" value="root" />
+		<add key="password" value="root" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -18,6 +29,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Types" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-14.0.0.0" newVersion="14.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.ReportViewer.WinForms" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
