--- a/DAL/packages.config
+++ b/DAL/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="MySqlConnector" version="2.2.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
