--- a/SGT-VS2019/packages.config
+++ b/SGT-VS2019/packages.config
@@ -2,4 +2,10 @@
 <packages>
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
   <package id="FontAwesome.less" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net472" />
+  <package id="Microsoft.ReportViewer.WebForms" version="10.0.40219.1" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
 </packages>
