Testes e implementações de pesquisa com ResultSet

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -84,6 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RelatorioBLL.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="VeiculoBLL.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
