--- a/SGT-VS2019/App.config
+++ b/SGT-VS2019/App.config
@@ -3,9 +3,7 @@
 	<configSections>
  </configSections>
  <connectionStrings>
-  <add name="SGT_VS2019.Properties.Settings.pauloturConnectionString"
-   connectionString="User Id=root;Host=localhost;Database=paulotur;Persist Security Info=True"
-   providerName="Devart.Data.MySql" />
+  <add name="SGT_VS2019.Properties.Settings.pauloturConnectionString" connectionString="User Id=root;Host=localhost;Database=paulotur;Persist Security Info=True" providerName="Devart.Data.MySql" />
  </connectionStrings>
  <appSettings>
 		<!--<add key="server" value="paulotur.mysql.uhserver.com" />
@@ -50,9 +48,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://apps.correios.com.br/SigepMasterJPA/AtendeClienteService/AtendeCliente"
-        binding="basicHttpBinding" bindingConfiguration="AtendeClienteServiceSoapBinding"
-        contract="WSCorreios.AtendeCliente" name="AtendeClientePort" />
+      <endpoint address="https://apps.correios.com.br/SigepMasterJPA/AtendeClienteService/AtendeCliente" binding="basicHttpBinding" bindingConfiguration="AtendeClienteServiceSoapBinding" contract="WSCorreios.AtendeCliente" name="AtendeClientePort" />
     </client>
   </system.serviceModel>
 </configuration>
