--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -83,6 +83,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Relatorios\rltMotorista.cs" />
+    <Compile Include="Relatorios\rltOleoDiesel.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Veiculo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
